// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/notes-list => on touch devices should show notes list and \`create note\` button on touch devices 1`] = `
<div
  class="notes-list"
>
  <lego-components_button
    classname="create-note-button create-note-button_touch"
    type="link"
    view="clear"
  />
  <div
    class="notes-list-item"
  >
    <div
      class="notes-list-item__description"
    >
      <h1
        class="notes-list-item__heading"
      >
        <ufo-rocks_icon
          cls="notes-list-item__pin-icon"
          iconsize="m"
        />
        <span
          class="notes-list-item__heading-text"
        >
          created yesterday and pinned
        </span>
      </h1>
      <div
        class="notes-list-item__second-row"
      >
        <span
          class="notes-list-item__time"
        >
          Сб
        </span>
        <span>
          note 2 snippet
        </span>
      </div>
    </div>
  </div>
  <div
    class="notes-list-item notes-list-item_with-attach"
  >
    <div
      class="notes-list-item__description"
    >
      <h1
        class="notes-list-item__heading"
      >
        <span
          class="notes-list-item__heading-text"
        >
          created today
        </span>
      </h1>
      <div
        class="notes-list-item__second-row"
      >
        <span
          class="notes-list-item__time"
        >
          20:43
        </span>
        <span>
          note 1 snippet
        </span>
      </div>
    </div>
    <div
      class="notes-list-item__preview-wrapper"
      style="background-image: url(attach-preview-url);"
    />
  </div>
  <div
    class="notes-list-item"
  >
    <div
      class="notes-list-item__description"
    >
      <h1
        class="notes-list-item__heading"
      >
        <span
          class="notes-list-item__heading-text"
        >
          created 6 days ago
        </span>
      </h1>
      <div
        class="notes-list-item__second-row"
      >
        <span
          class="notes-list-item__time"
        >
          Пн
        </span>
        <span>
          note 3 snippet
        </span>
      </div>
    </div>
  </div>
  <div
    class="notes-list-item"
  >
    <div
      class="notes-list-item__description"
    >
      <h1
        class="notes-list-item__heading"
      >
        <span
          class="notes-list-item__heading-text"
        >
          Без названия
        </span>
      </h1>
      <div
        class="notes-list-item__second-row"
      >
        <span
          class="notes-list-item__time"
        >
          14.04.19
        </span>
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/notes-list => should show list 1`] = `
<div
  class="notes-list"
>
  <lego-components_button
    classname="create-note-button create-note-button_desktop"
    type="link"
    view="clear"
    width="max"
  >
    Новая заметка
  </lego-components_button>
  <div
    class="notes-list-item"
  >
    <div
      class="notes-list-item__description"
    >
      <h1
        class="notes-list-item__heading"
      >
        <ufo-rocks_icon
          cls="notes-list-item__pin-icon"
          iconsize="m"
        />
        <span
          class="notes-list-item__heading-text"
        >
          created yesterday and pinned
        </span>
      </h1>
      <div
        class="notes-list-item__second-row"
      >
        <span
          class="notes-list-item__time"
        >
          Сб
        </span>
        <span>
          note 2 snippet
        </span>
      </div>
    </div>
  </div>
  <div
    class="notes-list-item notes-list-item_with-attach"
  >
    <div
      class="notes-list-item__description"
    >
      <h1
        class="notes-list-item__heading"
      >
        <span
          class="notes-list-item__heading-text"
        >
          created today
        </span>
      </h1>
      <div
        class="notes-list-item__second-row"
      >
        <span
          class="notes-list-item__time"
        >
          20:43
        </span>
        <span>
          note 1 snippet
        </span>
      </div>
    </div>
    <div
      class="notes-list-item__preview-wrapper"
      style="background-image: url(attach-preview-url);"
    />
  </div>
  <div
    class="notes-list-item"
  >
    <div
      class="notes-list-item__description"
    >
      <h1
        class="notes-list-item__heading"
      >
        <span
          class="notes-list-item__heading-text"
        >
          created 6 days ago
        </span>
      </h1>
      <div
        class="notes-list-item__second-row"
      >
        <span
          class="notes-list-item__time"
        >
          Пн
        </span>
        <span>
          note 3 snippet
        </span>
      </div>
    </div>
  </div>
  <div
    class="notes-list-item"
  >
    <div
      class="notes-list-item__description"
    >
      <h1
        class="notes-list-item__heading"
      >
        <span
          class="notes-list-item__heading-text"
        >
          Без названия
        </span>
      </h1>
      <div
        class="notes-list-item__second-row"
      >
        <span
          class="notes-list-item__time"
        >
          14.04.19
        </span>
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/notes-list => should show spin and call initNotesList when just mounted 1`] = `
<div
  class="notes-list notes-list_loading"
>
  <lego-components_spin
    progress="true"
    size="m"
    view="default"
  />
</div>
`;
